[package]
name = "voxel-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.1", features = ["bevy_winit", "render"] }
bevy-inspector-egui = "0.17.0"
bevy-vfx-bag = "0.1.0"
bevy_atmosphere = "0.5.0"
bevy_hanabi = "0.5.1"
bevy_rapier3d = "0.20.0"
block-mesh = "0.2.0"
fast-surface-nets = "0.2.0"
height-mesh = "0.1.0"
ilattice = { version = "0.2.0", features = ["morton-encoding"] }
leafwing-input-manager = "0.8.0"
ndshape = "0.3.0"
noise = "0.8.2"
rand = "0.8.5"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
